--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^2.0.0-beta.10",
+    "axios": "^0.20.0",
+    "babel-plugin-import": "^1.13.1",
     "core-js": "^3.6.5",
+    "less": "^3.0.4",
+    "less-loader": "^7.0.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
